--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,11 @@ GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
 EMAIL_VERIFICATION_CODE_TTL_MINUTES=10
 EMAIL_VERIFICATION_MAX_ATTEMPTS=5
 EMAIL_VERIFICATION_RESEND_COOLDOWN_SECONDS=60
+# Preferred provider for production (HTTP, works on Render free tier)
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=
+RESEND_API_URL=https://api.resend.com/emails
+# SMTP fallback (local/dev or paid hosting with SMTP egress)
 SMTP_HOST=
 SMTP_PORT=587
 SMTP_USER=
