Add GigaChat streaming provider for story generation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,3 +28,12 @@ YOOKASSA_SHOP_ID=
 YOOKASSA_SECRET_KEY=
 YOOKASSA_API_URL=https://api.yookassa.ru/v3
 PAYMENTS_RETURN_URL=http://localhost:5173/home
+# Story text generation provider: mock | gigachat
+STORY_LLM_PROVIDER=mock
+# GigaChat provider settings (used when STORY_LLM_PROVIDER=gigachat)
+GIGACHAT_AUTHORIZATION_KEY=
+GIGACHAT_SCOPE=GIGACHAT_API_PERS
+GIGACHAT_OAUTH_URL=https://ngw.devices.sberbank.ru:9443/api/v2/oauth
+GIGACHAT_CHAT_URL=https://gigachat.devices.sberbank.ru/api/v1/chat/completions
+GIGACHAT_MODEL=GigaChat-2-Lite
+GIGACHAT_VERIFY_SSL=true
