--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 fastapi>=0.115.0,<0.117.0
-uvicorn[standard]>=0.30.0,<0.35.0
+uvicorn>=0.30.0,<0.35.0
 sqlalchemy>=2.0.0,<2.1.0
 pydantic[email]>=2.9.0,<3.0.0
 python-jose[cryptography]>=3.3.0,<4.0.0
