Stabilize auth tokens and safer DB defaults for Render

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
 APP_NAME=MoRius API
 DEBUG=true
+# For Render: use Render Postgres (recommended) or sqlite on a persistent disk.
+# Example sqlite URL for Render disk mounted at /var/data:
+# DATABASE_URL=sqlite:////var/data/morius.db
 DATABASE_URL=sqlite:///./data/morius.db
 JWT_SECRET_KEY=change_this_secret_for_production
 JWT_ALGORITHM=HS256
