Switch OpenRouter defaults to GLM-5 and DeepSeek

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,6 +43,9 @@ GIGACHAT_VERIFY_SSL=true
 # OpenRouter provider settings (used when STORY_LLM_PROVIDER=openrouter)
 OPENROUTER_API_KEY=
 OPENROUTER_CHAT_URL=https://openrouter.ai/api/v1/chat/completions
-OPENROUTER_MODEL=openrouter/free
+OPENROUTER_MODEL=z-ai/glm-5
+OPENROUTER_WORLD_CARD_MODEL=deepseek/deepseek-r1-0528:free
+OPENROUTER_TRANSLATION_MODEL=deepseek/deepseek-r1-0528:free
+OPENROUTER_PLOT_CARD_MODEL=deepseek/deepseek-r1-0528:free
 OPENROUTER_SITE_URL=
 OPENROUTER_APP_NAME=MoRius
