--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,16 @@ DEBUG=true
 # Example sqlite URL for Render disk mounted at /var/data:
 # DATABASE_URL=sqlite:////var/data/morius.db
 DATABASE_URL=sqlite:///./data/morius.db
+DB_POOL_SIZE=20
+DB_MAX_OVERFLOW=40
+DB_POOL_TIMEOUT_SECONDS=30
+DB_POOL_RECYCLE_SECONDS=1800
+DB_POOL_PRE_PING=true
+SQLITE_BUSY_TIMEOUT_MS=10000
+SQLITE_ENABLE_WAL=true
+HTTP_POOL_CONNECTIONS=32
+HTTP_POOL_MAXSIZE=64
+WEB_CONCURRENCY=1
 JWT_SECRET_KEY=change_this_secret_for_production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_TTL_MINUTES=10080
