feat: split backend into services and unify frontend dialogs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,23 @@
 APP_NAME=MoRius API
 DEBUG=true
+APP_MODE=gateway
+# true: run schema/bootstrap checks on startup (recommended for gateway/monolith)
+# false: skip bootstrap work in leaf services (auth/story/payments)
+DB_BOOTSTRAP_ON_STARTUP=true
+APP_GZIP_ENABLED=true
+APP_GZIP_MINIMUM_SIZE=1024
+APP_TRUST_PROXY_HEADERS=true
+APP_FORWARDED_ALLOW_IPS=*
+APP_ALLOWED_HOSTS=*
 # For Render: use Render Postgres (recommended) or sqlite on a persistent disk.
 # Example sqlite URL for Render disk mounted at /var/data:
 # DATABASE_URL=sqlite:////var/data/morius.db
 DATABASE_URL=sqlite:///./data/morius.db
+# If not set, defaults are APP_MODE-aware:
+# gateway/monolith=20, story=16, auth=8, payments=8
 DB_POOL_SIZE=20
+# If not set, defaults are APP_MODE-aware:
+# gateway/monolith=40, story=24, auth=12, payments=12
 DB_MAX_OVERFLOW=40
 DB_POOL_TIMEOUT_SECONDS=30
 DB_POOL_RECYCLE_SECONDS=1800
@@ -13,7 +26,22 @@ SQLITE_BUSY_TIMEOUT_MS=10000
 SQLITE_ENABLE_WAL=true
 HTTP_POOL_CONNECTIONS=32
 HTTP_POOL_MAXSIZE=64
+# If not set, defaults are APP_MODE-aware:
+# gateway/monolith=2, story=2, auth=1, payments=1
 WEB_CONCURRENCY=1
+# Uvicorn tuning for high-load environments
+# Maximum number of pending TCP connections in the kernel accept queue
+UVICORN_BACKLOG=2048
+# Keep-alive timeout (seconds) for idle HTTP connections
+UVICORN_TIMEOUT_KEEP_ALIVE=5
+# Graceful shutdown timeout (seconds)
+UVICORN_TIMEOUT_GRACEFUL_SHUTDOWN=30
+# Optional hard cap on concurrent requests per worker (empty = unlimited)
+UVICORN_LIMIT_CONCURRENCY=
+# Log level: critical|error|warning|info|debug|trace
+UVICORN_LOG_LEVEL=info
+# Access logs can be disabled on very high traffic to reduce overhead
+UVICORN_ACCESS_LOG=true
 JWT_SECRET_KEY=change_this_secret_for_production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_TTL_MINUTES=10080
