--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,5 @@ python-multipart>=0.0.9,<0.1.0
 google-auth>=2.35.0,<3.0.0
 python-dotenv>=1.0.0,<2.0.0
 requests>=2.32.0,<3.0.0
+psycopg[binary]>=3.2.0,<4.0.0
+uvloop>=0.19.0,<0.22.0; platform_system != "Windows"
