--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,9 @@
 VITE_API_URL=http://localhost:8000
+VITE_AUTH_API_URL=http://localhost:8001
+VITE_STORY_API_URL=http://localhost:8002
+VITE_PAYMENTS_API_URL=http://localhost:8003
+# For single-domain proxy deployments (e.g. VPS + Nginx), you can set:
+# VITE_AUTH_API_URL=
+# VITE_STORY_API_URL=
+# VITE_PAYMENTS_API_URL=
 VITE_GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
