fix: stabilize reroll flow and avatar/dialogue rendering

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -45,8 +45,8 @@ UVICORN_ACCESS_LOG=true
 JWT_SECRET_KEY=change_this_secret_for_production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_TTL_MINUTES=10080
-CORS_ORIGINS=http://localhost:5173
-CORS_ORIGIN_REGEX=^https?://(localhost|127\\.0\\.0\\.1)(:\\d+)?$
+CORS_ORIGINS=http://localhost:5173,https://mo-rius.vercel.app
+CORS_ORIGIN_REGEX=^https?://(localhost|127\\.0\\.0\\.1)(:\\d+)?$|^https://mo-rius(?:-[a-z0-9-]+)?\\.vercel\\.app$
 GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
 EMAIL_VERIFICATION_CODE_TTL_MINUTES=10
 EMAIL_VERIFICATION_MAX_ATTEMPTS=5
