--- a/backend/.env.example
+++ b/backend/.env.example
@@ -68,7 +68,16 @@ AVATAR_MAX_BYTES=2097152
 YOOKASSA_SHOP_ID=
 YOOKASSA_SECRET_KEY=
 YOOKASSA_API_URL=https://api.yookassa.ru/v3
-PAYMENTS_RETURN_URL=http://localhost:5173/home
+PAYMENTS_RETURN_URL=https://your-frontend-domain/dashboard
+YOOKASSA_WEBHOOK_TOKEN=
+YOOKASSA_WEBHOOK_TRUSTED_IPS_ONLY=false
+YOOKASSA_RECEIPT_ENABLED=false
+# Optional: 1..6 (0 means "do not send tax_system_code")
+YOOKASSA_RECEIPT_TAX_SYSTEM_CODE=0
+# 1..6
+YOOKASSA_RECEIPT_VAT_CODE=1
+YOOKASSA_RECEIPT_PAYMENT_MODE=full_payment
+YOOKASSA_RECEIPT_PAYMENT_SUBJECT=service
 # Story text generation provider: openrouter | gigachat | mock
 STORY_LLM_PROVIDER=openrouter
 # GigaChat provider settings (used when STORY_LLM_PROVIDER=gigachat)
@@ -82,8 +91,8 @@ GIGACHAT_VERIFY_SSL=true
 OPENROUTER_API_KEY=
 OPENROUTER_CHAT_URL=https://openrouter.ai/api/v1/chat/completions
 OPENROUTER_MODEL=z-ai/glm-5
-OPENROUTER_WORLD_CARD_MODEL=deepseek/deepseek-r1-0528:free
-OPENROUTER_TRANSLATION_MODEL=deepseek/deepseek-r1-0528:free
-OPENROUTER_PLOT_CARD_MODEL=deepseek/deepseek-r1-0528:free
+OPENROUTER_WORLD_CARD_MODEL=google/gemma-3-12b-it:free
+OPENROUTER_TRANSLATION_MODEL=google/gemma-3-12b-it:free
+OPENROUTER_PLOT_CARD_MODEL=google/gemma-3-12b-it:free
 OPENROUTER_SITE_URL=
 OPENROUTER_APP_NAME=MoRius
