--- a/backend/.env.example
+++ b/backend/.env.example
@@ -94,5 +94,8 @@ OPENROUTER_MODEL=z-ai/glm-5
 OPENROUTER_WORLD_CARD_MODEL=google/gemma-3-12b-it:free
 OPENROUTER_TRANSLATION_MODEL=google/gemma-3-12b-it:free
 OPENROUTER_PLOT_CARD_MODEL=google/gemma-3-12b-it:free
+OPENROUTER_IMAGE_URL=https://openrouter.ai/api/v1/chat/completions
+OPENROUTER_IMAGE_MODEL=black-forest-labs/flux.2-klein-4b
+OPENROUTER_IMAGE_SIZE=1024x1024
 OPENROUTER_SITE_URL=
 OPENROUTER_APP_NAME=MoRius
