--- a/backend/.env.example
+++ b/backend/.env.example
@@ -91,9 +91,9 @@ GIGACHAT_VERIFY_SSL=true
 OPENROUTER_API_KEY=
 OPENROUTER_CHAT_URL=https://openrouter.ai/api/v1/chat/completions
 OPENROUTER_MODEL=z-ai/glm-5
-OPENROUTER_WORLD_CARD_MODEL=google/gemma-3-12b-it:free
-OPENROUTER_TRANSLATION_MODEL=google/gemma-3-12b-it:free
-OPENROUTER_PLOT_CARD_MODEL=google/gemma-3-12b-it:free
+OPENROUTER_WORLD_CARD_MODEL=meta-llama/llama-3.3-70b-instruct:free
+OPENROUTER_TRANSLATION_MODEL=meta-llama/llama-3.3-70b-instruct:free
+OPENROUTER_PLOT_CARD_MODEL=z-ai/glm-4.5-air:free
 OPENROUTER_IMAGE_URL=https://openrouter.ai/api/v1/chat/completions
 OPENROUTER_IMAGE_MODEL=black-forest-labs/flux.2-klein-4b
 OPENROUTER_IMAGE_SIZE=1024x1024
